Fix collapse about

--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -1,6 +1,7 @@
 .banner {
   position: relative;
   width: 100%;
+  max-width: 1440px;
   height: 223px;
   border-radius: 25px;
   background-size: cover;
