--- a/src/pages/About/About.scss
+++ b/src/pages/About/About.scss
@@ -6,14 +6,25 @@
 }
 
 .about__content {
-  margin: 30px auto 40px;
-  max-width: 1024px;
+  width: 100%;
+  max-width: 800px;     
+  margin: 0 auto;        
   display: flex;
   flex-direction: column;
-  gap: 30px;
+  gap: 30px;             
+  padding: 0 16px;       
+  box-sizing: border-box;
 }
 
-/* Si tu actives la banner plus tard */
+.about__collapse-wrapper {
+  max-width: 800px;   
+  margin: 0 auto;      
+  display: flex;
+  flex-direction: column;
+  gap: 30px;           
+}
+
+
 .about__banner {
   margin-top: 20px;
   height: 223px;
